Final project report part 1.1

--- a/report.tex
+++ b/report.tex
@@ -768,16 +768,38 @@ Of the 5 files, 3 of them also contain list manipulation functions. seqZip and s
 \end {itemize}
 
 \subsection{Prototype}
+My initial prototype consisted of a single file that implemented the various functions as I saw fit. All of the list generation functions were present in this prototype, but there were only 2 list manipulation functions: list extension and list arithmetic. List arithmetic was initially planned as 4 separate functions for each arithmetic operation, but upon noticing that I was reusing code between almost all of them, I decided to merge the 4 together into 1 function and use an integer input to differentiate between each input. The project was greatly expanded in order to better demonstrate the various methods of using infinite lists that I had found in Haskell.
 
-Placeholder
+\medskip\noindent
+seqRec can be treated as the second prototype on account of it building off knowledge I had already learned from class. In doing this, I was able to map out the logic of the functions from a familiar approach before tackling them in new ways.
 
 \subsection{Documentation}
+\subsubsection{List Comprehension}
+Test
 
-Placeholder
+\subsubsection{Haskell map Function}
+Test
+
+\subsubsection{Haskell zipWith Function}
+Test
+
+\subsubsection{Haskell scanl Function}
+Test
+
+\subsubsection{Manipulating Lists}
+Test
 
 \subsection{Critical Appraisal}
+There are no known bugs in my final project.
 
-Placeholder
+\subsubsection{Observations}
+Test
+
+\subsubsection{Questions}
+Test
+
+\subsubsection{Further Comments}
+Test
 
 \section{Conclusions}\label{conclusions}
 
